# backend/docs/swagger.json
@@ -161,13 +161,6 @@
                 "summary": "Create a ebook",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Tryout ID",
-                        "name": "ebookId",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
                         "description": "Request Body",
                         "name": "request",
                         "in": "body",
